...
        KeychainWrapper.standard.set(user.accessToken, forKey: "accessToken")
    }
    
    func showAlert(_ message : String){
        let alert = UIAlertController(title: "Alerta", message: message, preferredStyle: .alert)

        alert.addAction(UIAlertAction(title: "Ok", style: .cancel, handler: { action in
            if action.style == .cancel{
                print("ok button pressed")
            }
        }))
        
        present(alert, animated: true)
...
